services/fd-tagging-tool/src/test/resources/valid/ValidCombination/Sink.mt
// (c) https://github.com/MontiCore/monticore
package valid.ValidCombination;

component Sink {
  port in int value;
}
