services/fd-tagging-tool/src/test/resources/invalid/NoComponentPresent/Sink.mt
// (c) https://github.com/MontiCore/monticore
package invalid.NoComponentPresent;

component Sink {
  port in int value;
}
